// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsActivity component should render daily room events 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={[MockFunction]}
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="4a1506ab-e03e-4036-9b19-c55a3c449375"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="cf4aa52a-507c-4034-9358-82839ca76e8f"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="865c9739-b646-440f-a1c7-b7bb0f469c8a"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b6ecaf51-f42d-415b-b09e-04f383af74f5"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="48c05832-2951-4209-9193-ea62d13b1be9"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="5dd9026b-790a-44c0-80c9-fac0556a8083"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="f8733877-17b2-4459-8571-d5eb76210169"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="98f52bc6-78aa-4e84-a544-a3686e385dd5"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="0e732fe9-9b99-4cf6-8040-139a1567b234"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="7cd00bce-d8bb-4418-98a6-f2d85ada26a2"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ee66ee50-3ba4-4625-add7-a784dfe05e4d"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="04f3f51d-8294-4a88-adce-a465e9065bb4"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="481291af-e876-4fc9-9b4d-b96d43e68725"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b8560c28-53bf-401f-b947-7446b838143c"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ad4698e0-2813-4a15-9b44-8691f9a2f58c"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b9e7b54f-03a6-491e-93e9-36720b0c9b4b"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="e625d669-cba3-4a49-8124-8f9843166906"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ee541c9b-ef36-4efe-ad99-c4809226c6a6"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="a093e848-727d-4cb6-aa25-6619b9265fc0"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="40c843b9-c244-459a-87f8-dd13c67f3194"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="b06dd390-6434-45b5-89db-3758933098bb"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="0aaad9db-7c25-4eb4-91c4-0deb47184f61"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="a62a3127-0874-4ea9-83ec-92ac2b6c4e6d"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ae7f82ef-304b-4477-8bef-f8b6f052d4ce"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="d1492b1a-940b-4032-8062-41476e17f7c7"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;

exports[`AnalyticsActivity component should render resource not founr 1`] = `
<AnalyticsActivity
  dateValue={
    Object {
      "endDate": null,
      "startDate": null,
    }
  }
  queryCompleted={
    [MockFunction] {
      "calls": Array [
        Array [
          "analyticsForDailyRoomEvents",
        ],
      ],
    }
  }
>
  <center
    className="room__events"
  >
    <div
      className="meeting-title"
    >
      <div
        className="title-heading"
      >
        Meeting Title
      </div>
      <div
        className="room-heading"
      >
        Booked Room
      </div>
      <div
        className="status-heading"
      >
        Status
      </div>
      <div
        className="participant-heading"
      >
        Participants
      </div>
    </div>
    <Overlay
      id="average-meeting"
    >
      <div>
        <div
          className="overlay"
          id="average-meeting"
        />
        <div
          className="Pagination-spinner"
        >
          <Spinner
            size=""
          >
            <div
              className="centered"
            >
              <div
                className="spinner"
              />
            </div>
          </Spinner>
        </div>
      </div>
    </Overlay>
    <div>
      <div
        className="activity"
        key="3f50d495-a9fd-4dbc-816b-de31bc388e16"
      >
        <div
          className="activity-day"
        >
          Thu May 30 2019
        </div>
        <div>
          <div
            className="activity-info-row"
            key="301e24cc-6e83-40ea-870a-1710d4010f6b"
          >
            <div
              className="title"
            >
              <div>
                Measure Standup
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  04:15:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:45:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                10
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="9ea344e9-bc13-4046-8ca5-bf3033b607a2"
          >
            <div
              className="title"
            >
              <div>
                Olamide x David
              </div>
            </div>
            <div
              className="room"
            >
              Safari5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="20c3353d-9c95-45cb-88c9-70749e97df7a"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwagbemileke Oguntayo  - Senior Operations Manager, Nigeria
              </div>
            </div>
            <div
              className="room"
            >
              Kajuru
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="12f476e6-384a-4a81-a98d-82c0da6cc08f"
          >
            <div
              className="title"
            >
              <div>
                Agnes / Annabelle Catch Up
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="ebd1449a-9bb6-4f61-af4c-c01fea8bf65d"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="64646c7b-7307-4cf3-85c0-7351ce5e5704"
          >
            <div
              className="title"
            >
              <div>
                Interview: Oluwatoyin Williams-Edem - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="f1bce18b-30cd-498c-99d1-b3d2f454e0b1"
          >
            <div
              className="title"
            >
              <div>
                Apprenticeship Sync
              </div>
            </div>
            <div
              className="room"
            >
              Cotonous
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                59
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="df7164ae-062d-4a71-8b99-a79c5eb699cb"
          >
            <div
              className="title"
            >
              <div>
                Team meetings
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="80e298be-b99f-4760-b647-a49c5547d554"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="7a7be15e-58fe-4f33-a317-1cabad7716f8"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="2377105a-0473-41b2-897a-6953ae2981cd"
          >
            <div
              className="title"
            >
              <div>
                Interview: Ayodele Odufuye - Senior Manager, HR Business Partner
              </div>
            </div>
            <div
              className="room"
            >
              Safari-me
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="dfce4f5c-0b21-4431-8d75-797976b4cc16"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="8e464721-a901-4823-8b5c-9f670a8479ed"
          >
            <div
              className="title"
            >
              <div>
                Engineer Self Check-in 
              </div>
            </div>
            <div
              className="room"
            >
              test-5
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                6
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="72b2ef5a-46ee-49b7-9bc7-fd607bf323c1"
          >
            <div
              className="title"
            >
              <div>
                Oladimeji + Tejumade _ Software Engineer (Values Alignment Call)
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="864482db-ddd0-413a-98e7-0e868b7ab216"
          >
            <div
              className="title"
            >
              <div>
                Chux &lt;&gt; Godwin - Values Alignment Interview
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:30:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="d3b53f72-0ac8-4c08-9fee-dff9ddc5506e"
          >
            <div
              className="title"
            >
              <div>
                Brad &lt;&gt; Tope 1:1
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  03:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="27526857-394b-4515-8d01-1d941a464fc7"
          >
            <div
              className="title"
            >
              <div>
                Lara&lt;&gt;Nneka
              </div>
            </div>
            <div
              className="room"
            >
              Ikogosi
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  05:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  05:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="38168662-651c-47ac-b253-e06a170f9e92"
          >
            <div
              className="title"
            >
              <div>
                Ghana General Manager Interview: Christiane Koenig
              </div>
            </div>
            <div
              className="room"
            >
              Empire State
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                4
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="af122324-0869-4662-9572-3521af41c7b6"
          >
            <div
              className="title"
            >
              <div>
                Extended org sync
              </div>
            </div>
            <div
              className="room"
            >
              Cognito
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:40:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                12
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="4073caec-e144-48e0-a9cd-059b2b01cbf7"
          >
            <div
              className="title"
            >
              <div>
                Member Education
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  03:30:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="9d4d2384-1fbe-4007-8be9-9ffeb74bf9ef"
          >
            <div
              className="title"
            >
              <div>
                Ann &lt;&gt; Sam
              </div>
            </div>
            <div
              className="room"
            >
              Oculus
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="dbbdf752-46cd-42bb-b730-e7103b593670"
          >
            <div
              className="title"
            >
              <div>
                Onsite Interview: Douglas + Team | Recruiting Operations Associate
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  12:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                5
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="db4d7256-542b-4b5d-893e-fcb78fca6ae3"
          >
            <div
              className="title"
            >
              <div>
                Values Call Alignment: Caroline&lt;&lt;&gt;&gt; Manasseh
              </div>
            </div>
            <div
              className="room"
            >
              Algiers
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  01:00:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  02:00:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                3
              </span>
            </div>
          </div>
          <div
            className="activity-info-row"
            key="6162aa40-8970-404d-9549-4fb940b9100a"
          >
            <div
              className="title"
            >
              <div>
                Dev/Partner Meetings :)
              </div>
            </div>
            <div
              className="room"
            >
              Test Add
            </div>
            <div
              className="status"
            >
              <div
                className="started"
              >
                Started 
                <bdi>
                  11:50:00
                   
                  EAT
                </bdi>
              </div>
              <div
                className="ended"
              >
                Ended 
                <bdi>
                  04:25:00
                   
                  EAT
                </bdi>
              </div>
            </div>
            <div
              className="participants"
            >
              <img
                alt=""
                src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FGroup.svg?alt=media&token=7f06b0bb-46bb-456a-ac35-9eeab8a16362"
              />
              <span>
                2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </center>
</AnalyticsActivity>
`;
